# door-server

./: .gitignore  Cargo.toml  Rakefile  ReadMe.md  bticino-configurator-values.md  inventory.yml  playbook-alpine.yml  playbook.yml
.cargo/: config.toml  runner
.github/workflows/: cargo-build-publish.yml  ci.yml
examples/: test.rs
pcb/: door-server.kicad_pro  door-server.kicad_sch  power-supply.kicad_sch  relays.kicad_sch
pcb/door-adapter/: door-adapter.kicad_dru  door-adapter.kicad_pcb  door-adapter.kicad_pro  door-adapter.kicad_sch
src/: action.rs  board.rs  door.rs  garage_door.rs  led.rs  lib.rs  main.rs  waveshare_relay.rs
