[package]
name = "door-server"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2021"
publish = false

[dependencies]
env_logger = "0.10"
log = "0.4"
rppal = { version = "0.16", features = ["hal"] }
serde_json = "1"
webthing = "0.15.2"
actix-rt = "2.9.0"
uuid = "1"
embedded-hal = "1"
ws2812-spi = { version = "0.4.0", features = ["std"] }
smart-leds = "0.3.0"
ekey = "0.6.0"
linux-embedded-hal = "0.3.2"
tokio = { version = "1.34.0", features = ["macros", "net", "rt-multi-thread"] }

[lib]
name = "door_server"
path = "src/lib.rs"

[[bin]]
name = "door-server"
path = "src/main.rs"

[patch.crates-io]
rppal = { git = "https://github.com/reitermarkus/rppal", branch = "embedded-hal-1" }
ws2812-spi = { git = "https://github.com/smart-leds-rs/ws2812-spi-rs", branch = "dev/hosted" }
