[package]
name = "door-server"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2024"
publish = false

[dependencies]
env_logger = "0.11"
log = "0.4"
rppal = { version = "0.22", features = ["embedded-hal"] }
serde_json = "1"
webthing = "0.15.2"
actix-rt = "2.10.0"
uuid = "1"
ws2812-spi = { version = "0.5.0", features = ["std"] }
smart-leds = "0.4.0"
ekey = "0.6.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

[lib]
name = "door_server"
path = "src/lib.rs"

[[bin]]
name = "door-server"
path = "src/main.rs"
